feat(approval): direct_supervisor 沿祖先回溯 + 部门负责人改回下拉
- ApprovalFlowServiceImpl.resolveDirectSupervisor 在本部门 leader_id 为空时
  沿 dept.ancestors 自下而上找最近一个有负责人的祖先部门，新部门无负责人
  也能自动路由到父部门负责人
- 部门表单"负责人"改回 n-select 下拉，按本部门员工范围加载，可留空
  （留空时引擎走祖先兜底）
- V55 迁移：用现有 dept.leader 文本反查 sys_user.nickname 回填 leader_id，
  仅对 nickname 唯一对应一个启用用户的部门生效，其余留空

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>